# ble_gateway

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ble-gateway.service  ble_gateway.py  ble_message.py  install-service.sh  pyproject.toml  requirements.txt  scan_backends.py
.claude/: settings.local.json
.github/workflows/: tests.yml
docs/: AWS_IOT_TROUBLESHOOTING.md  DAEMON_SETUP.md  FEATURES.md  GATEWAY_MAC.md  LOGGING_GUIDE.md  README.md  TROUBLESHOOTING.md  aws-iot-policy-example.json
examples/: README.md
examples/configs/: config.aws.example.json  config.hci_coded.example.json  config.lowload.example.json  config.modes.example.json
tests/: conftest.py  helpers.py  test_ble_message.py  test_factory_and_config.py  test_hci_marshal.py  test_parse_ad_structures.py  test_parse_ext_adv_report.py  test_payload_filter.py
tools/: hci_live_test.py
